# DnDWithin

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  bun.lockb  example_character.json  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  vite.config.ts
src/: App.svelte  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ability.rs  character.rs  commons.rs  description.rs  equipment.rs  feature.rs  lib.rs  main.rs  spell.rs  test.json
src/lib/: Abilities.svelte  Ability.svelte  CharacterSheet.svelte  EditingSheet.svelte  Proficiency.svelte  Roll.svelte  Skills.svelte  commons.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
