[package]
name = "app"
version = "0.2.5"
description = "An Editable DND 5E Character Sheet"
authors = ["CyprienGille"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
tauri = { version = "1.7.1", features = ["dialog-open", "dialog-save"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
